find testcase -> excute testcases -> result -> allure

--- a/notes/4_environment.ipynb
+++ b/notes/4_environment.ipynb
@@ -36,8 +36,63 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "# 3. 使用fixtrue固件结合contest.py文件实现前后置\n",
+    "装饰器: <br>\n",
+    "@pytest.fixture(scope=\"作用范围\", autouser=\"自动执行\", params=\"参数化\", ids=\"参数别名\", name=\"固件别名\") <br>\n",
+    "scope: function 函数 <br>\n",
+    "scope: class 类 <br>\n",
+    "scope: module 模块 <br>\n",
+    "scope: session 回话<br>\n",
+    "<br>\n",
+    "fixture只在当前文件起作用，需要结合conftest.py"
+   ],
    "id": "57a5eaab9164d62f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import pytest\n",
+    "\n",
+    "# fixture 固件\n",
+    "@pytest.fixture(scope=\"session\",autouse=False,params=[[\"zhouy218\",\"136671\"],[\"beifan\",\"beifan123\"]],ids=[\"data1\",\"data2\"], name=\"sql\")\n",
+    "def exe_sql(request):\n",
+    "    print(\"before: execute database\")\n",
+    "    yield request.param\n",
+    "    print(\"After: close database\")"
+   ],
+   "id": "9aff837261f5a131"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 4. 接口自动化测试框架封装之通过文件接口关联实现\n",
+    "原因: <br>\n",
+    "1. 类变量不能跨py文件使用\n",
+    "2. 统一管理中间变量\n",
+    "<br> <br>\n",
+    "什么时候clear <br> 请求之前，原因: 保留鉴权码 <br>\n",
+    "# Jmeter工具做不到:\n",
+    "1. RSA，签名，自定义加密，混合加密\n",
+    "2. 生成美观报告\n",
+    "3. 复用，扩展性\n",
+    "4. 团队协作\n",
+    "# Tool -> frame -> 平台\n",
+    "\n"
+   ],
+   "id": "a8ca7d4aaadcac70"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3edff3f8888e2d80"
   }
  ],
  "metadata": {
